--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
     "next": "14.0.4",
+    "next-video": "^0.11.1",
     "react": "^18",
     "react-dom": "^18"
   },
